public/stylesheets/style.css
html, body, * {
  margin: 0;
  padding: 0; }

/* work-sans-200 - latin */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 200;
  src: local("Work Sans ExtraLight"), local("WorkSans-ExtraLight"), url("../fonts/work-sans-v3-latin-200.woff2") format("woff2"), url("../fonts/work-sans-v3-latin-200.woff") format("woff");
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }

/* work-sans-regular - latin */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 400;
  src: local("Work Sans"), local("WorkSans-Regular"), url("../fonts/work-sans-v3-latin-regular.woff2") format("woff2"), url("../fonts/work-sans-v3-latin-regular.woff") format("woff");
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }

/* work-sans-600 - latin */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 600;
  src: local("Work Sans SemiBold"), local("WorkSans-SemiBold"), url("../fonts/work-sans-v3-latin-600.woff2") format("woff2"), url("../fonts/work-sans-v3-latin-600.woff") format("woff");
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: local("Montserrat Regular"), local("Montserrat-Regular"), url("../fonts/montserrat-v12-latin-regular.woff2") format("woff2"), url("../fonts/montserrat-v12-latin-regular.woff") format("woff");
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }

input[type="submit"] {
  -webkit-appearance: none;
  appearance: none;
  padding: 2%;
  transition: background .3s ease-in-out,color .3s ease-in-out, border-color .3s ease-in-out; }
  input[type="submit"]:hover {
    background: #3996B9;
    color: white;
    border-color: white;
    cursor: pointer;
    transition: background .3s ease-in-out,color .3s ease-in-out, border-color .3s ease-in-out; }

#main {
  font-family: "Montserrat", sans-serif;
  font-weight: lighter;
  width: 70%; }
  #main h1 {
    font-family: "Montserrat";
    color: white;
    background: #C93936;
    padding: 0 3%; }
  #main p {
    padding: 0 3%;
    font-family: "Work Sans"; }
  #main .post_list {
    margin: 0; }
    #main .post_list a {
      list-style-type: none;
      border-bottom: 0.1em solid #C93936;
      border-top: 0.1em solid #C93936;
      padding: 2% 5%;
      display: block;
      color: black;
      margin: 1% 0;
      transition: box-shadow .3s ease-in-out, transform .3s ease-in-out; }
      #main .post_list a .post_date {
        color: #999; }
      #main .post_list a .post_content_preview {
        overflow: hidden;
        white-space: nowrap; }
      #main .post_list a:hover {
        box-shadow: 0 0 100px 1px rgba(0, 0, 0, 0.5);
        transform: scale(1.05);
        transition: box-shadow .3s ease-in-out, transform .3s ease-in-out;
        cursor: pointer; }
  #main .author {
    padding: 0 3%;
    color: #999;
    font-size: 80%; }
  #main .text_content {
    padding: 0 3%; }
  #main #author_list {
    margin: 0; }
    #main #author_list a {
      list-style-type: none;
      display: block;
      padding: 2% 5%;
      border-bottom: 0.1em solid #C93936;
      border-top: 0.1em solid #C93936;
      margin: 1% 0;
      color: black;
      transition: box-shadow .3s ease-in-out, transform .3s ease-in-out; }
      #main #author_list a:hover {
        box-shadow: 0 0 100px 1px rgba(0, 0, 0, 0.5);
        transform: scale(1.05);
        transition: box-shadow .3s ease-in-out, transform .3s ease-in-out;
        cursor: pointer; }

.dropdown {
  margin-bottom: 1% !important; }
  .dropdown .submenu {
    padding: 1.5% 1%; }
  .dropdown li {
    list-style-type: none;
    font-family: "Work Sans", sans-serif;
    font-size: 1.5rem;
    margin: 0 2%;
    transition: color .3s ease-in-out; }
    .dropdown li:after {
      content: '';
      height: 1px;
      width: 0;
      display: block;
      background: black;
      position: relative;
      left: 50%;
      transition: width .3s ease-in-out, left .3s ease-in-out, background .3s ease-in-out; }
    .dropdown li:hover {
      cursor: pointer;
      color: #3996B9;
      transition: color .1s ease-in-out; }
      .dropdown li:hover:after {
        width: 96%;
        left: 0;
        background: #3996B9;
        transition: width .1s ease-in-out, left .1s ease-in-out, background .1s ease-in-out; }

